Messi.g4
grammar Messi;

//Gramatica
program: statement* EOF;

statement
    : switchStatement
    | assignmentStatement
    | consoleStatement
    ;

switchStatement
    : 'switch' '(' expression ')' '{' caseClause+ defaultClause? '}'
    ;

caseClause
    : 'case' expression ':' statement*
    ;

defaultClause
    : 'default' ':' statement*
    ;

assignmentStatement
    : Identifier '=' expression ';'
    ;

consoleStatement
    : 'console' '.' 'log' '(' expression ')' ';'
    ;

expression
    : term (('+' | '-' | '*' | '/') term)*
    ;

term
    : Identifier
    | Number
    | '(' expression ')'
    | StringLiteral
    ;

StringLiteral
    : '"' (~["\\] | '\\' .)*? '"'
    ;

Identifier
    : Letter (Letter | Digit | '_')*
    ;

Number
    : Digit+
    ;

fragment Letter
    : [a-zA-Z]
    ;

fragment Digit
    : [0-9]
    ;

WS
    : [ \t\r\n]+ -> skip
    ;
